# bakery-env

./: Dockerfile  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml
server/: app.py
