[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bakery-env"
version = "1.0.0"
description = "Bakery inventory management environment for AI agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
    "pydantic"
]

[project.scripts]
server = "server.app:main"
